# ramon-dashboard

./: .gitignore  README.md  dev-app-update.yml  electron-builder.yml  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
src/enums/: DemoAsync.enum.ts  DemoSync.enum.ts  index.ts
src/files/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  demo_pc.py  fifo.c  fifo.h  main.c  sockets.c  sockets.h  storage.c  storage.h
src/files/json/: json-maker.c  json-maker.h  lwjson.c  lwjson.h  opt_lwjson.h
src/main/: createWindow.ts  index.ts  iniatializeDomeSingle.ts  initializeDemo.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/assets/styles/: main.scss
src/renderer/assets/styles/base/: _helpers.scss  _layout.scss  _reset.scss
src/renderer/assets/styles/components/: _actions.scss  _logo.scss  _versions.scss
src/renderer/assets/styles/setup/: _mixins.scss  _variables.scss
src/renderer/src/: renderer.ts
src/server/: demo.json  demo_pc.py  demo_pc_arg.py  demo_pc_arg_dynamic.py  demo_pc_elseif.py  demo_pc_last.py  storagedemo
